# template-python

./: README.md  pyproject.toml
app/: app.py  container.py
app/application/todo/: service.py
app/domain/todo/: __init__.py  repository.py
app/infrastructure/api/: setup.py
app/infrastructure/api/todo/: controller.py  schema.py
app/infrastructure/database/: test_todo_repository.py  todo_repository.py
