[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "A simple backend using a Clean Architecture"
authors = ["Francisco Briones Lavados"]
license = "MIT"
readme = "README.md"
packages = [{include = "*"}]

[tool.poetry.scripts]
start = "poetry run python app"

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.40.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
bandit = "^1.7.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
